<?xml version="1.0"?>
<package format="2">
  <name>ired_movetogoal</name>
  <version>1.0.1</version>
  <description>The ired_movetogoal package</description>
  <maintainer email="aimslabkmitl@gmail.com">AIMs Lab KMITL</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>

</package>
